Fixed page alignment

--- a/apps/frontend/src/components/DescriptionBox/DescriptionBox.module.css
+++ b/apps/frontend/src/components/DescriptionBox/DescriptionBox.module.css
@@ -56,8 +56,4 @@
     justify-content: flex-start;
     margin: 10px 0 0 22px;
   }
-
-  .container {
-    padding: 15px;
-  }
 }
